Se connecter et se souvenir de moi Ok

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -13,11 +13,14 @@ security:
         app_user_provider:
             entity:
                 class: App\Entity\Participant
-                property: email
+                #property: email
+
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+
         main:
             lazy: true
             provider: app_user_provider
@@ -26,6 +29,10 @@ security:
                 path: app_logout
                 # where to redirect after logout
                 # target: app_any_route
+            remember_me:
+                secret: '%kernel.secret%'
+                lifetime: 604800 # 1 week in seconds
+                path: /
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
